--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,59 +21,59 @@
   },
   "dependencies": {
     "@ckpack/vue-color": "^1.4.1",
-    "@fortawesome/fontawesome-svg-core": "1.3.0",
-    "@fortawesome/free-brands-svg-icons": "6.0.0",
-    "@fortawesome/free-regular-svg-icons": "6.0.0",
-    "@fortawesome/free-solid-svg-icons": "6.0.0",
-    "@fortawesome/vue-fontawesome": "3.0.0-5",
-    "@fullcalendar/core": "5.10.1",
-    "@fullcalendar/daygrid": "5.10.1",
-    "@fullcalendar/interaction": "5.10.1",
-    "@fullcalendar/timegrid": "5.10.1",
-    "@popperjs/core": "2.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/vue-fontawesome": "^3.0.0",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@popperjs/core": "^2.11.6",
     "@vuepic/vue-datepicker": "^3.6.7",
     "axios": "^1.2.2",
-    "bootstrap": "5.1.3",
-    "chart.js": "3.6.0",
-    "choices.js": "9.0.1",
-    "core-js": "3.6.5",
-    "dragula": "3.7.3",
-    "dropzone": "6.0.0-beta.1",
-    "jkanban": "1.3.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.9.1",
+    "choices.js": "^9.0.1",
+    "core-js": "^3.23.3",
+    "dragula": "^3.7.3",
+    "dropzone": "^6.0.0-beta.1",
+    "jkanban": "^1.3.1",
     "jsona": "^1.11.0",
-    "leaflet": "1.7.1",
-    "photoswipe": "4.1.3",
-    "quill": "1.3.6",
-    "round-slider": "1.6.1",
-    "simple-datatables": "3.2.0",
-    "three": "0.124.0",
+    "leaflet": "^1.7.1",
+    "photoswipe": "^4.1.3",
+    "quill": "^1.3.6",
+    "round-slider": "^1.6.1",
+    "simple-datatables": "^3.2.0",
+    "three": "^0.124.0",
     "vee-validate": "^4.7.3",
-    "vue": "3.4.26",
-    "vue-count-to": "1.0.13",
-    "vue-flatpickr-component": "9.0.5",
-    "vue-round-slider": "1.0.1",
-    "vue-router": "4.0.14",
-    "vue-star-rating": "2.1.0",
-    "vue-sweetalert2": "5.0.2",
-    "vue-tilt.js": "1.1.1",
-    "vuex": "4.0.2",
+    "vue": "^3.4.26",
+    "vue-count-to": "^1.0.13",
+    "vue-flatpickr-component": "^9.0.5",
+    "vue-round-slider": "^1.0.1",
+    "vue-router": "^4.0.14",
+    "vue-star-rating": "^2.1.0",
+    "vue-sweetalert2": "^5.0.2",
+    "vue-tilt.js": "^1.1.1",
+    "vuex": "^4.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/simple-datatables": "^3.2.0",
-    "@vue/cli-plugin-babel": "4.5.15",
-    "@vue/cli-plugin-eslint": "4.5.15",
-    "@vue/cli-plugin-router": "4.5.15",
-    "@vue/cli-service": "4.5.15",
-    "@vue/compiler-sfc": "3.2.0",
-    "@vue/eslint-config-prettier": "6.0.0",
-    "babel-eslint": "10.1.0",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
+    "@vue/compiler-sfc": "^3.2.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "6.7.2",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-vue": "7.0.0",
-    "prettier": "2.2.1",
-    "sass": "1.43.3",
-    "sass-loader": "10.1.1"
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.0.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.43.3",
+    "sass-loader": "^10.1.1"
   }
 }
