--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,4 +1,3 @@
-
 name: "Backend Continuous Integration"
 
 on:
@@ -30,6 +29,14 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: composer install --no-progress --prefer-dist --optimize-autoloader
+
+      - name: Copy environment file
+        working-directory: ./backend
+        run: cp .env.example .env
+
+      - name: Generate application key
+        working-directory: ./backend
+        run: php artisan key:generate
 
       - name: Run unit tests
         working-directory: ./backend
