--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -45,6 +45,10 @@ jobs:
             sleep 3
           done
 
+      - name: Check MySQL connection
+        run: |
+          docker run --network="host" --rm mysql:5.7 mysql -h127.0.0.1 -uroot -proot -e "SHOW DATABASES;"
+
       - name: Run database migrations and seeders
         run: |
           docker run --network="host" -e DB_CONNECTION=mysql -e DB_HOST=127.0.0.1 -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest php artisan migrate --seed
