agrego migración de tablas para unitest v8

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           docker run --network="host" -e DB_CONNECTION=mysql -e DB_HOST=127.0.0.1 -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest php artisan migrate || exit 1
 
-      - name: Check database tables
+      - name: Check database tables after migrations
         run: |
           docker run --network="host" --rm mysql:5.7 mysql -h127.0.0.1 -uroot -proot -e "USE test; SHOW TABLES;"
 
@@ -61,7 +61,7 @@ jobs:
         run: |
           docker run --network="host" -e DB_CONNECTION=mysql -e DB_HOST=127.0.0.1 -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest php artisan db:seed || exit 1
 
-      - name: Check database content
+      - name: Check database content after seeders
         run: |
           docker run --network="host" --rm mysql:5.7 mysql -h127.0.0.1 -uroot -proot -e "USE test; SELECT * FROM users;"
 
