--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -17,9 +17,9 @@ jobs:
         image: mysql:5.7
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: test
-          MYSQL_USER: user
-          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: geminis
+          MYSQL_USER: userGeminis
+          MYSQL_PASSWORD: secret
         options: >-
           --health-cmd="mysqladmin ping --silent"
           --health-interval=10s
@@ -42,7 +42,7 @@ jobs:
         run: docker build -t geminis-backend:latest -f RoadRunner.Dockerfile .
 
       - name: Start MySQL container
-        run: docker run -d --network ci-network --name mysql -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=user -e MYSQL_PASSWORD=password mysql:5.7
+        run: docker run -d --network ci-network --name mysql -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=geminis -e MYSQL_USER=userGeminis -e MYSQL_PASSWORD=secret mysql:5.7
 
       - name: Wait for MySQL
         run: |
@@ -58,19 +58,40 @@ jobs:
         run: docker run --network ci-network geminis-backend:latest ls -la /var/www/html/database/migrations
 
       - name: Run all database migrations
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest php artisan migrate --force || exit 1
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: mysql
+          DB_PORT: 3306
+          DB_DATABASE: geminis
+          DB_USERNAME: userGeminis
+          DB_PASSWORD: secret
+        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest php artisan migrate --force || exit 1
 
       - name: Check database tables after migrations
-        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE test; SHOW TABLES;"
+        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE geminis; SHOW TABLES;"
 
       - name: Run database seeders
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest php artisan db:seed --force || exit 1
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: mysql
+          DB_PORT: 3306
+          DB_DATABASE: geminis
+          DB_USERNAME: userGeminis
+          DB_PASSWORD: secret
+        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest php artisan db:seed --force || exit 1
 
       - name: Check database content after seeders
-        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE test; SELECT * FROM users;"
+        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE geminis; SELECT * FROM users;"
 
       - name: Run unit tests
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=test -e DB_USERNAME=user -e DB_PASSWORD=password geminis-backend:latest ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --testdox || exit 1
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: mysql
+          DB_PORT: 3306
+          DB_DATABASE: geminis
+          DB_USERNAME: userGeminis
+          DB_PASSWORD: secret
+        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --testdox || exit 1
 
       - name: Upload test results
         if: always()
