modifico dockerfile del back agrego [200~COPY backend/database/migrations /var/www/html/database/migrations

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -57,23 +57,26 @@ jobs:
       - name: Check MySQL connection
         run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "SHOW DATABASES;"
 
+      - name: Copy .env file into Docker container
+        run: docker cp backend/.env $(docker ps -qf "name=geminis-backend"):./var/www/.env
+
       - name: List migration files
-        run: docker run --network ci-network geminis-backend:latest ls -la /var/www/html/database/migrations
+        run: docker exec geminis-backend ls -la /var/www/html/database/migrations
 
       - name: Run all database migrations
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest php artisan migrate --force || exit 1
+        run: docker exec -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend php artisan migrate --force || exit 1
 
       - name: Check database tables after migrations
-        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE geminis; SHOW TABLES;"
+        run: docker exec mysql mysql -hmysql -uroot -proot -e "USE geminis; SHOW TABLES;"
 
       - name: Run database seeders
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest php artisan db:seed --force || exit 1
+        run: docker exec -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend php artisan db:seed --force || exit 1
 
       - name: Check database content after seeders
-        run: docker run --network ci-network --rm mysql:5.7 mysql -hmysql -uroot -proot -e "USE geminis; SELECT * FROM users;"
+        run: docker exec mysql mysql -hmysql -uroot -proot -e "USE geminis; SELECT * FROM users;"
 
       - name: Run unit tests
-        run: docker run --network ci-network -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend:latest ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --testdox || exit 1
+        run: docker exec -e DB_CONNECTION=mysql -e DB_HOST=mysql -e DB_PORT=3306 -e DB_DATABASE=geminis -e DB_USERNAME=userGeminis -e DB_PASSWORD=secret geminis-backend ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.xml --testdox || exit 1
 
       - name: Upload test results
         if: always()
