agrego este copy en dockerfile COPY deployment/run.sh /var/www/docker/run.sh

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -1,3 +1,13 @@
+name: CI for Backend
+
+on:
+  push:
+    branches:
+      - 'develop'
+  pull_request:
+    branches:
+      - 'develop'
+
 jobs:
   build-and-test:
     name: Build and Test
