--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -9,8 +9,10 @@ on:
       - 'develop'
 
 jobs:
-
-
+  build-and-test:
+    name: Build and Test
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
