--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -13,15 +13,49 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_DATABASE: geminis
+          MYSQL_USER: userGeminis
+          MYSQL_PASSWORD: secret
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3 
-
-      - name: Verify Dockerfile exists
-        run: ls -l RoadRunner.Dockerfile
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
         run: docker build -t geminis-backend:latest -f RoadRunner.Dockerfile .
+
+      - name: Start MySQL container
+        run: docker run -d --name mysql \
+          -e MYSQL_ROOT_PASSWORD=secret \
+          -e MYSQL_DATABASE=geminis \
+          -e MYSQL_USER=userGeminis \
+          -e MYSQL_PASSWORD=secret \
+          mysql:8
+
+      - name: Start backend container
+        run: docker run -d --name geminis-backend --link mysql:mysql geminis-backend:latest
+
+      - name: Copy .env.example and rename to .env
+        run: docker cp backend/.env.example geminis-backend:/var/www/.env
+
+      - name: Update .env for MySQL
+        run: docker exec geminis-backend sed -i 's/DB_HOST=127.0.0.1/DB_HOST=mysql/' /var/www/.env
+
+      - name: Run migrations
+        run: docker exec geminis-backend php artisan migrate
+
+      - name: Run unit tests
+        run: docker exec geminis-backend vendor/bin/phpunit
