--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -34,28 +34,37 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Verify Dockerfile exists
+        run: ls -l RoadRunner.Dockerfile
+
       - name: Build Docker image
         run: docker build -t geminis-backend:latest -f RoadRunner.Dockerfile .
 
       - name: Start MySQL container
-        run: docker run -d --name mysql \
-          -e MYSQL_ROOT_PASSWORD=secret \
-          -e MYSQL_DATABASE=geminis \
-          -e MYSQL_USER=userGeminis \
-          -e MYSQL_PASSWORD=secret \
-          mysql:8
+        run: |
+          docker run -d --name mysql \
+            -e MYSQL_ROOT_PASSWORD=secret \
+            -e MYSQL_DATABASE=geminis \
+            -e MYSQL_USER=userGeminis \
+            -e MYSQL_PASSWORD=secret \
+            mysql:8
 
       - name: Start backend container
-        run: docker run -d --name geminis-backend --link mysql:mysql geminis-backend:latest
+        run: |
+          docker run -d --name geminis-backend --link mysql:mysql geminis-backend:latest
 
       - name: Copy .env.example and rename to .env
-        run: docker cp backend/.env.example geminis-backend:/var/www/.env
+        run: |
+          docker cp backend/.env.example geminis-backend:/var/www/.env
 
       - name: Update .env for MySQL
-        run: docker exec geminis-backend sed -i 's/DB_HOST=127.0.0.1/DB_HOST=mysql/' /var/www/.env
+        run: |
+          docker exec geminis-backend sed -i 's/DB_HOST=127.0.0.1/DB_HOST=mysql/' /var/www/.env
 
       - name: Run migrations
-        run: docker exec geminis-backend php artisan migrate
+        run: |
+          docker exec geminis-backend php artisan migrate
 
       - name: Run unit tests
-        run: docker exec geminis-backend vendor/bin/phpunit
+        run: |
+          docker exec geminis-backend vendor/bin/phpunit
